Fixed rounding errors in QtQuick1 to int conversions

qRound introduced errors when qreal is single precision. Added
double signature for qround so that string and int don't lose precision
in conversion.

Task-number: QTBUG-33625

Change-Id: I58582f57d5cd68fcad3fe9efb5fea5935f61b9e3
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>